Projeto puro HTML

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 
-<HTml>
+<Html>
 
-    <HEAD>
+    <head>
+        <title>Página princupal</title>
+        <meta charset="utf8">
+    </head>
 
-    </HEAD>
+    <body background="imagens/fundo2.png">
 
-    <BODy>
+        <table border="0" width="900" align="center">
+            <tr>
 
+                <td heigth="89"><img src="imagens/logo.png" alt=""></td>
+
+                <td align="right">
+                    <a href="index.html">Home |</a>
+                    <a href="Quem somos.html">Quem somos |</a>
+                    <a href="Contato.html">Contato </a> 
+                </td>
+            </tr>
+
+            <tr>
+                <td colspan="2" align="center">
+                    <img src="imagens\capa.png" alt="">
+                </td>
+            </tr>
         
-    </BODy>
+        <tr>
+            <td colspan="2" align="left">
+            <h2>Sobre a universidade</h2>
+            <p>A Universidade <strong>UNES</strong>  tem como missão constituir-se num centro de geração e difusão do saber, 
+                articulando as atividades de ensino,<br> de pesquisa e extensão, em consonância com as demandas da sociedade 
+                contemporânea e do mundo do trabalho, respeitando a diversidade e <br> cultivando a solidariedade, a inclusão, 
+                os valores humanos e a ética, visando à formação de cidadãos qualificados e potencialmente aptos a <br> contribuir 
+                para o desenvolvimento socioeconômico da sua região de influência.</p>
 
-</HTml>
+                <p>A Universidade <strong>UNES</strong>  tem como missão constituir-se num centro de geração e difusão do saber, 
+                    articulando as atividades de ensino,<br> de pesquisa e extensão, em consonância com as demandas da sociedade 
+                    contemporânea e do mundo do trabalho, respeitando a diversidade e <br> cultivando a solidariedade, a inclusão, 
+                    os valores humanos e a ética, visando à formação de cidadãos qualificados e potencialmente aptos a <br> contribuir 
+                    para o desenvolvimento socioeconômico da sua região de influência.</p>
+            </td>
+        </tr>
+                <tr>
+                    <td colspan="2" align="center">
+                <h3>Todos os direitos reservados</h3>
+                    </td>
+                </tr>
+
+            </table><br>
+    </body>
+
+</Html>
